src/objects/Tracking_LOG__c.object
<CustomObject>
    <fields>
        <fullName>END_CPUTIME__c</fullName>
        <label>CPUTIME</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>END_DATE__c</fullName>
        <label>END DATE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>END_DML_OPERATIONS__c</fullName>
        <label>DML OPERATIONS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>END_HEAPSIZE__c</fullName>
        <label>HEAPSIZE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>END_QUERYROWS__c</fullName>
        <label>QUERYROWS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>END_QUERYS__c</fullName>
        <label>QUERYS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ERROR_DESCRIPTION__c</fullName>
        <label>ERROR DESCRIPTION</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERROR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ERROR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXCEPTION__c</fullName>
        <label>EXCEPTION</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KEY__c</fullName>
        <externalId>true</externalId>
        <label>KEY</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LINE_NUMBER__c</fullName>
        <label>LINE NUMBER</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QUANTITY_RECORDS__c</fullName>
        <label>QUANTITY RECORDS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REQUEST__c</fullName>
        <label>REQUEST</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RESPONSE__c</fullName>
        <label>RESPONSE</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>STACKTRACE__c</fullName>
        <label>STACKTRACE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>START_CPUTIME__c</fullName>
        <label>CPUTIME</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>START_DATE__c</fullName>
        <label>START DATE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>START_DML_OPERATIONS__c</fullName>
        <label>DML OPERATIONS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>START_HEAPSIZE__c</fullName>
        <label>HEAPSIZE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>START_QUERYROWS__c</fullName>
        <label>QUERYROWS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>START_QUERYS__c</fullName>
        <label>QUERYS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STATUS__c</fullName>
        <label>STATUS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Finished</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TYPE__c</fullName>
        <label>TYPE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Batch</fullName>
                </value>
                <value>
                    <fullName>Future</fullName>
                </value>
                <value>
                    <fullName>Lightning Component</fullName>
                </value>
                <value>
                    <fullName>Lightning web</fullName>
                </value>
                <value>
                    <fullName>Scheduler</fullName>
                </value>
                <value>
                    <fullName>Trigger</fullName>
                </value>
                <value>
                    <fullName>Visualforce</fullName>
                </value>
                <value>
                    <fullName>Webservice</fullName>
                </value>
                <value>
                    <fullName>Common</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VERSION__c</fullName>
        <label>VERSION</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Tracking LOG</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ERROR__c</columns>
        <columns>EXCEPTION__c</columns>
        <columns>TYPE__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>STATUS__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>teste</fullName>
        <columns>NAME</columns>
        <columns>ERROR__c</columns>
        <columns>EXCEPTION__c</columns>
        <columns>TYPE__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>test</label>
    </listViews>
    <nameField>
        <label>Tracking LOG Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tracking LOGS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>